Replace `new Wrapper` with `Wrapper.valueOf` to support newer JDKs